--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -100,8 +100,8 @@
               <label class="se-placeholder">
                   <input type="text" placeholder="Search" class="search-input" id="input-event-title" />
               </label>
-              <a class="btn btn-small" href="#" id="button-event-title"> <i class="icon-search"></i></a>
               <a class="btn btn-small" href="#" id="button-event-refresh"> <i class="icon-refresh"></i></a>
+              <a class="btn btn-small" href="#" id="button-event-title"> <i class="icon-search"></i></a>
           </div>
         <!--
           <div class="grid-or-list">
@@ -111,27 +111,10 @@
         -->
       </div>
       <div class="content">
-          <ul class="flex-container flex-container-events">          
-            <% @events.each do |event| %>
-            <a class="" href="/events/<%= event.id %>">
-              <li class="flex-item">
-                <div class="img-event">
-                  <div class="wrapperB" style="background-image: url('<%= event.picture %>');"></div>
-                </div>
-                <div class="content-event">
-                  <p class="title-event multiline-ellipsis"><%= link_to(event.title, event, :class => "link link-title") %></p>
-
-                  <p class="date-event">From <%= event.start_time.strftime("%d %B %Y") %> to <%= event.end_time.strftime("%d %B %Y") %></p>
-                  <p class="multiline-ellipsis">
-                    <%= event.description %>
-                  </p>
-                </div>
-              </li>
-            </a>
-            <% end %>
+          <ul class="flex-container flex-container-events">      
           </ul>
           <ul class="flex-container flex-container-error">          
-            <li class="flex-item"<%= ' style="display: none;"' if @events.length > 0 %>
+            <li class="flex-item"<%== ' style="display: none;"' if @events.length > 0 %>>
               There is unfortunately no more events for these search filters
             </li>
           </ul>
