--- a/app/assets/stylesheets/events_se.css
+++ b/app/assets/stylesheets/events_se.css
@@ -77,8 +77,8 @@
 }
 
 .title-event,.date-event, .body-text-event{
-    padding-left: 0.4em;
-    margin: 0;
+    margin: 0em 0.4em;
+    padding: 0;
 }
 
 .title-event{
