--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -26,6 +26,7 @@ body, html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
+    background-size: cover;
 }
 
 .link{
@@ -129,10 +130,7 @@ footer {
 section.main .left .search {
     background-color: #f1f1f1;
     padding: 5px;
-    margin-left: 2px;
-    margin-bottom: 10px;
-    margin-right:0;
-    padding-right:0;
+    margin-top: -1px;
 }
 
 .fb-login-button-large, .fb-login-button-small {
@@ -140,7 +138,6 @@ section.main .left .search {
 }
 
 .image-cover-div {
-    min-height: 100px;
     max-height: 280px;
     max-width: 970px;
     margin: auto;
@@ -158,13 +155,28 @@ section.main .left .search {
     position: absolute; 
     bottom: 10%; 
     left: 3%; 
-    opacity: 0.8;
+    color: white;
     max-width: 60%;
     overflow: hidden;
-    font-size: 25px;
+    font-size: 35px;
     white-space: nowrap;
     text-overflow: ellipsis;
     text-align: left;
+}
+
+.image-cover-div:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: linear-gradient(to bottom, #31495A, #000000);
+  opacity: 0.4;
+}
+
+.image-cover-div img {
+  margin-top: -25%;
 }
 
 header,
@@ -182,9 +194,8 @@ section.show{
 }
 
 .show-body{
-    padding:1.2em;
     background: #FFFFFF;
-    padding: 5px;
+    padding: 20px 10px;
     color: #111111;
     border:solid #bdc3c7 1px;
 }
@@ -739,9 +750,16 @@ input[type=checkbox].categorie:checked + label:after {
 
 }
 
-.fb-login-button {
+.fb-login-button, .profile-picture-mini {
     float: right;
+}
 
+.profile-picture-mini {
+  padding: 0px 10px;
+}
+
+.profile-picture-large {
+  
 }
 
 .header-content > h1 {
@@ -757,7 +775,7 @@ input[type=checkbox].categorie:checked + label:after {
 }
 
 .fb-login-button-small{
-    display: none;
+    
 }
 
 /*-----------------------------------------------------------------------------*/
