--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,10 +1,16 @@
   <div id="event-main-page"></div>
-  <div class="image-cover-div">
-    <% if not @event_cover.nil? %>
-    <%= link_to(image_tag(@event_cover.picture , :alt => @event_cover.title ,:class => "img-cover"), @event_cover) %>
-    <%= link_to(@event_cover.title, @event_cover, :class => 'link link-title title-event flex-item cover-overlay') %>
-    <% end %>
-  </div>
+
+  <% if not @event_cover.nil? %>
+  <a href="<%= event_path(@event_cover) %>">
+    <div class="image-cover-div">
+      <%= image_tag(@event_cover.picture , :alt => @event_cover.title ,:class => "img-cover") %>
+      <span class="link link-title title-event cover-overlay">
+        <%= @event_cover.title %>
+      </span>
+    </div>
+  </a>
+  <% end %>
+
   <section class="main">
   <nav class="nav-bar">
       <!-- DEBUT DU FILTRE TITRE -->
