--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -6,7 +6,7 @@
 /*-----------------------------------------------------------------------------*/
 
 .map, #map{
-    margin:auto;
+    margin-top: 10px;
 }
 
 
@@ -130,6 +130,7 @@ footer {
 section.main .left .search {
     background-color: #f1f1f1;
     padding: 5px;
+    padding-right: 0px;
     margin-top: -1px;
 }
 
@@ -201,7 +202,7 @@ section.show{
 }
 
 .show-description{
-    margin:2em;
+    margin:1em;
 }
 
 .show-information {
