Mise à jour du footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,6 +73,11 @@
   
   <%= yield %>
 
-  <footer>FOOTER</footer>
+  <footer>
+    <pre>
+      SocialEvents is a website sum up events from Facebook
+      © Copyright 2015 Social Events. Hosting provided by HE-ARC
+    </pre>
+  </footer>
 </body>
 </html>
