--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -755,6 +755,10 @@ input[type=checkbox].categorie:checked + label:after {
     float: right;
 }
 
+.profile-picture-float {
+  float: left;
+  margin: 5px;
+}
 .profile-picture-mini {
   padding: 0px 10px;
 }
@@ -777,6 +781,11 @@ input[type=checkbox].categorie:checked + label:after {
 
 .fb-login-button-small{
     
+}
+
+table.first-login-table td {
+  vertical-align: top;
+  padding-right: 10px;
 }
 
 /*-----------------------------------------------------------------------------*/
