--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,30 @@
 <section class="main">
   <div class="content">
-
-    <h1>Profil de <%= @user.first_name %> <%= @user.last_name %></h1>
+    
+    <h1> Your informations </h1>
+    <table class="profile-table" style="border:1px solid black; width:100%;">
+      <tr>
+        <td rowspan="2" class="profile-td" style="width:35%;">
+           <%= image_tag(@user.profile_picture(220, 220), :alt => "Profile picture") %>
+        </td>
+         <td class="profile-td" style="width:70%; vertical-align:top;">
+           <h1><%= @user.first_name %> <%= @user.last_name %></h1>
+           <h2>Shared events: <%= @user.contributions_counter %></h2>
+           
+        </td>
+       </tr>
+      
+       <tr>
+          <td style="width:70%; vertical-align:bottom;">
+            <button style="width:100%; height:40px;" id="import">Share more events !</button> 
+          </td>
+      </tr> 
+    </table>
+    
 
     <% if @is_my_profile %>
     <p>
-      <button id="import">Fetch my events</button> 
+      
       <span class="fetching" style="display: <%= @user_is_fetching ? 'inline' : 'none' %>">A fetching is already occuring</span>
       <% if @user_is_fetching %>
         <div class="fetching-flag underway"></div>
@@ -18,11 +37,10 @@
       <% end %>
     </p>
     <% end %>
-
-    <%= image_tag(@user.profile_picture(250, 250), :alt => "Profile picture") %>
   
+    <h1> Your contributions </h1>
     <p>Nombre de contributions : <%= @user.contributions_counter %></p>
-    
+
     <ul class="flex-container">
       <% @events.each do |event| %>
       <li class="flex-item">
